--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <li class="register button5">Crear Cuenta</li>
             <li class="login button6">Iniciar Sesion</li>
         </ol>
-        <div class="logo">Shelter Garage
+        <div class="logo">
+            <a href="#" class="shelter">Shelter Garage</a>
             <form class="d-flex buscador" role="Buscar">
                 <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
                 <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -104,58 +105,60 @@
             <section class="container-fluid-destacados">
                 <div class="row d-flex justify-content-center">
                     <article class="card col-3 my-2">
-                        <img src="../img/1.webp" class="card-img-top" alt="...">
+                        <img src="./img/1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Toxic Shine Seal</h5>
-                            <p class="card-text">Toxic Shine Seal It <br> $3.580</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <h5 class="card-title">SEAL "TOXIC SHINE"</h5>
+                            <p class="card-text">$3.580</p>
+                            <a href="./pages/contacto.html" class="btn btn-primary">Comprar</a>
                         </div>
                     </article>
                     <article class="card col-3 my-2">
-                        <img src="../img/2.webp" class="card-img-top" alt="...">
+                        <img src="./img/2.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Meguiars Ultimate 2</h5>
-                            <p class="card-text">Meguiars Ultimate Quick detail $13.933</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <h5 class="card-title">ULTIMATE 2 "MEGUIARS"</h5>
+                            <p class="card-text">$13.933</p>
+                            <a href="./pages/contacto.html" class="btn btn-primary">Comprar</a>
                         </div>
                     </article>
                     <article class="card col-3 my-2">
-                        <img src="../img/3.webp" class="card-img-top" alt="...">
+                        <img src="./img/3.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">KochChemie Qs</h5>
-                            <p class="card-text">KochChemie Quick Shine $8.304</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <h5 class="card-title">QUICK & SHINE "KOCHCHEMIE"</h5>
+                            <p class="card-text">$8.304</p>
+                            <a href="./pages/contacto.html" class="btn btn-primary">Comprar</a>
                         </div>
                     </article>
                     <article class="card col-3 my-2">
-                        <img src="../img/3.webp" class="card-img-top" alt="...">
+                        <img src="./img/4.webp" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">KochChemie Qs</h5>
-                            <p class="card-text">KochChemie Quick Shine $8.304</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
+                            <h5 class="card-title">LEATHER PROTECTANT "3D"</h5>
+                            <p class="card-text">$8.304</p>
+                            <a href="./pages/contacto.html" class="btn btn-primary">Comprar</a>
                         </div>
                     </article>
                 </div>
             </section>
         <section id="nuestros-servicios">
-            <div class="container-fluid-servicios">
+            <div>
                 <h2>Nuestros Servicios</h2>
+            </div>
+            <div class="container-fluid-servicios col-3 mx-auto my-auto">
                 <div class="servicios">
                     <div class="carta">
                         <h4>Abrillantados</h4>
-                        <button>+ Info</button>
+                        <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
                     <div class="carta">
                         <h4>Lavados Premium</h4>
-                        <button>+ Info</button>
+                        <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
                     <div class="carta">
                         <h4>Tratatientos Ceramicos & Acrilicos</h4>
-                        <button>+ Info</button>
+                        <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
                     <div class="carta">
                         <h4>Limpieza de Interiores</h4>
-                        <button>+ Info</button>
+                        <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
                 </div>
             </div>
