--- a/pages/cuidadointerior.html
+++ b/pages/cuidadointerior.html
@@ -20,7 +20,8 @@
         <li class="register button5">Crear Cuenta</li>
         <li class="login button6">Iniciar Sesion</li>
     </ol>
-    <div class="logo">Shelter Garage
+    <div class="logo">
+        <a href="../index.html" class="shelter">Shelter Garage</a>
         <form class="d-flex buscador" role="Buscar">
             <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -92,20 +93,22 @@
         </nav>
         <main>
             <section id="nuestros-servicios">
-                <div class="container">
+                <div>
                     <h2>Nuestros Servicios</h2>
+                </div>
+                <div class="container img-fluid">
                     <div class="servicios">
-                        <div class="volante">
+                        <div class="volante img-fluid">
                             <h4>Retapizado de volantes</h4>
-                            <button>Solicitar Turno</button>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solicitar Turno</a>
                         </div>
-                        <div class="tapizado">
+                        <div class="tapizado img-fluid">
                             <h4>Limpieza y pintura de <br>tapizados <br></h4>
-                            <button>Solicitar Turno</button>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solicitar Turno</a>
                         </div>
-                        <div class="motor">
+                        <div class="motor img-fluid">
                             <h4>Detallado de motor</h4>
-                            <button>Solicitar Turno</button>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solicitar Turno</a>
                         </div>
                     </div>
                 </div>
