--- a/pages/otrosservicios.html
+++ b/pages/otrosservicios.html
@@ -20,7 +20,8 @@
         <li class="register button5">Crear Cuenta</li>
         <li class="login button6">Iniciar Sesion</li>
     </ol>
-    <div class="logo">Shelter Garage
+    <div class="logo">
+        <a href="../index.html" class="shelter">Shelter Garage</a>
         <form class="d-flex buscador" role="Buscar">
             <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -103,8 +104,8 @@
                         <div class="card-body">
                             <h5 class="card-title">PPF PAINT PROTECT FILM</h5>
                             <p class="card-text">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
-                                <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
-                            <button>Solictar Presupuesto</button>
+                            <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solictar Presupuesto</a>
                         </div>
                     </div>
                 </div>
@@ -118,13 +119,13 @@
                         <div class="card-body">
                             <h5 class="card-title">POLARIZADOS</h5>
                             <p class="card-text">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
-                                <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
-                            <button>Solictar Presupuesto</button>
+                            <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solictar Presupuesto</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 1300px;">
+            <div class="card mb-3 img-" style="max-width: 1300px;">
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="../img/Reparacion-de-llantas.jpg" class="img-fluid rounded-start" alt="...">
@@ -133,8 +134,8 @@
                         <div class="card-body">
                             <h5 class="card-title">RESTAURACION DE LLANTAS</h5>
                             <p class="card-text">Protección Rayos UV a los pasajeros <br>Reducción de la Senasación Termíca en el Interior
-                                <br>Seguridad, ocultando lo que llevas en el interior <br></p>
-                            <button>Solictar Presupuesto</button>
+                            <br>Seguridad, ocultando lo que llevas en el interior <br></p>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solictar Presupuesto</a>
                         </div>
                     </div>
                 </div>
@@ -150,7 +151,7 @@
                             <h5 class="card-title">RESTAURACION DE OPTICAS</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <button>Solictar Presupuesto</button>
+                            <a href="../pages/contacto.html" class="btn btn-primary">Solictar Presupuesto</a>
                         </div>
                     </div>
                 </div>
