--- a/pages/productos.html
+++ b/pages/productos.html
@@ -20,7 +20,8 @@
         <li class="register button5">Crear Cuenta</li>
         <li class="login button6">Iniciar Sesion</li>
     </ol>
-    <div class="logo">Shelter Garage
+    <div class="logo">
+        <a href="../index.html" class="shelter">Shelter Garage</a>
         <form class="d-flex buscador" role="Buscar">
             <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -90,7 +91,7 @@
                 </div>
             </div>
         </nav>
-        <div id="carouselExampleIndicators" class="carousel slide w-75 d-flex align-items-center">
+        <div id="carouselExampleIndicators" class="carousel slide w-75 d-flex img-fluid mx-auto">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -104,7 +105,7 @@
                   <img src="../img/GLABS2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../img/s3.jpeg" class="d-block w-100" alt="...">
+                  <img src="../img/PORTADA.webp" class="d-block w-100" alt="...">
                 </div>
             </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -125,33 +126,33 @@
                         <article class="card col-3 my-2">
                             <img src="../img/1.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Toxic Shine Seal</h5>
-                                <p class="card-text">Toxic Shine Seal It <br> $3.580</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">SEAL "TOXIC SHINE"</h5>
+                                <p class="card-text">$3.580</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                         </article>
                         <article class="card col-3 my-2">
                             <img src="../img/2.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Meguiars Ultimate 2</h5>
-                                <p class="card-text">Meguiars Ultimate Quick detail $13.933</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">ULTIMATE 2 "MEGUIARS" </h5>
+                                <p class="card-text">$13.933</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                         </article>
                         <article class="card col-3 my-2">
                             <img src="../img/3.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">QUICK & SHINE "KOCHCHEMIE"</h5>
+                                <p class="card-text">$8.304</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                         </article>
                         <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/7 3d-leather-protectant1-b5fc7411ae09482dca15996756660976-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">LEATHER PROTECTANT "3D"</h5>
+                                <p class="card-text">$10.860</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                         </article>
                     </div>
@@ -161,99 +162,99 @@
                     <section class="container-fluid-todos">
                         <div class="row d-flex justify-content-center">
                             <article class="card col-3 my-2">
-                                <img src="../img/1.webp" class="card-img-top" alt="...">
+                                <img src="../img/1 71-7eeaa8f4da84de616a16292243921941-320-0.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Toxic Shine Seal</h5>
-                                    <p class="card-text">Toxic Shine Seal It <br> $3.580</p>
-                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                    <h5 class="card-title">KIT INTERIOR "DREAMS DETAILLING"</h5>
+                                    <p class="card-text">$10.831</p>
+                                    <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                                 </div>
                             </article>
                             <article class="card col-3 my-2">
-                                <img src="../img/2.webp" class="card-img-top" alt="...">
+                                <img src="../img/2 koch-chemie-green-start-1l1-b4d560ad8bb43e60fa15906042358726-320-0.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Meguiars Ultimate 2</h5>
-                                    <p class="card-text">Meguiars Ultimate Quick detail $13.933</p>
-                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                    <h5 class="card-title">GREEN START "KOCHCHEMIE" </h5>
+                                    <p class="card-text">$12.096</p>
+                                    <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                                 </div>
                           </article>
                           <article class="card col-3 my-2">
-                              <img src="../img/3.webp" class="card-img-top" alt="...">
+                              <img src="../img/3 koch-chemie-top-start1-e829c3b99c98f8b2f315906076836102-320-0.webp" class="card-img-top" alt="...">
                               <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">TOP START "KOCHCHEMIE"</h5>
+                                <p class="card-text">$13.836</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                               </div>
                           </article>
                           <article class="card col-3 my-2">
-                              <img src="../img/3.webp" class="card-img-top" alt="...">
+                              <img src="../img/11 dreams-leather-condotioner1-8ae2bd88e784dfc6a016241256627270-320-0.webp" class="card-img-top" alt="...">
                               <div class="card-body">
-                                    <h5 class="card-title">KochChemie Qs</h5>
-                                    <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                    <a href="#" class="btn btn-primary">Comprar</a>
+                                    <h5 class="card-title">LEATHER CONDITIONER "DREAMS DETAILLING"</h5>
+                                    <p class="card-text">$3.050</p>
+                                    <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                               </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/12glabs-limpiador-de-cuero1-204f1544faf4b85bde15944205468174-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">LIMPIADOR DE CUERO "GLABS"</h5>
+                                <p class="card-text">$1.900</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/13 hidrocouro-vonix1-20ff767eaa11feb21316637886137936-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">HIDRACOURO VONIXX</h5>
+                                <p class="card-text">$3.304</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/14 koch-chemie-protect-leather-care1-246571065be7133cee15906078979324-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">PROTECT LEATHER CARE "KOCHCHEMIE"</h5>
+                                <p class="card-text">$18.319</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/15 luxury-leather-soft-991-050e6e721bf3c1d76816637890000923-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">LUXURY LEATHER "SOFT 99"</h5>
+                                <p class="card-text">$13.547</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/16 meguiars-rich-leather1-3fe156dee7f8b70a6816239366046419-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">RICH LEATHER "MEGUIARS"</h5>
+                                <p class="card-text">$10.333</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/17 ps-leather-treatment1-9fd6a1b58837d565a416068321072435-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">LEATHER TREATMENT "P&S"</h5>
+                                <p class="card-text">$5.304</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/19glabs-carnauba-fusion1-fb7117ae737a1f48c416241257779136-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">CARNAUBA FUSION "GLABS"</h5>
+                                <p class="card-text">$5.150</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>
                             </div>
                           </article>
                           <article class="card col-3 my-2">
-                            <img src="../img/3.webp" class="card-img-top" alt="...">
+                            <img src="../img/18fusso-oscuros-11-15a722849fc380558516466795240510-320-0.webp" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">KochChemie Qs</h5>
-                                <p class="card-text">KochChemie Quick Shine $8.304</p>
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <h5 class="card-title">CERA FUSSO COAT "SOFT99"</h5>
+                                <p class="card-text">KochChemie Quick Shine $26.225</p>
+                                <a href="../pages/contacto.html" class="btn btn-primary">Comprar</a>    
                             </div>
                           </article>
                         </div>
