--- a/pages/cuidadoexterior.html
+++ b/pages/cuidadoexterior.html
@@ -20,7 +20,8 @@
         <li class="register button5">Crear Cuenta</li>
         <li class="login button6">Iniciar Sesion</li>
     </ol>
-    <div class="logo">Shelter Garage
+    <div class="logo">
+        <a href="../index.html" class="shelter">Shelter Garage</a>
         <form class="d-flex buscador" role="Buscar">
             <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
