--- a/index.html
+++ b/index.html
@@ -142,21 +142,21 @@
             <div>
                 <h2>Nuestros Servicios</h2>
             </div>
-            <div class="container-fluid-servicios col-3 mx-auto my-auto">
+            <div class="container img-fluid">
                 <div class="servicios">
-                    <div class="carta">
+                    <div class="carta img-fluid">
                         <h4>Abrillantados</h4>
                         <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
-                    <div class="carta">
+                    <div class="carta img-fluid">
                         <h4>Lavados Premium</h4>
                         <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
-                    <div class="carta">
+                    <div class="carta img-fluid">
                         <h4>Tratatientos Ceramicos & Acrilicos</h4>
                         <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
-                    <div class="carta">
+                    <div class="carta img-fluid">
                         <h4>Limpieza de Interiores</h4>
                         <a href="./pages/contacto.html" class="btn btn-primary">+ Info</a>
                     </div>
