--- a/pages/otrosservicios.html
+++ b/pages/otrosservicios.html
@@ -133,8 +133,8 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">RESTAURACION DE LLANTAS</h5>
-                            <p class="card-text">Protección Rayos UV a los pasajeros <br>Reducción de la Senasación Termíca en el Interior
-                            <br>Seguridad, ocultando lo que llevas en el interior <br></p>
+                            <p class="card-text">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
+                            <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
                             <a href="../pages/contacto.html" class="btn btn-primary">Solictar Presupuesto</a>
                         </div>
                     </div>
