--- a/pages/productos.html
+++ b/pages/productos.html
@@ -121,7 +121,7 @@
             <div>
                 <h2>PRODUCTOS DESTACADOS</h2>
             </div>
-                <section class="container-fluid-destacados">
+                <section class="container-fluid destacados">
                     <div class="row d-flex justify-content-center">
                         <article class="card col-3 my-2">
                             <img src="../img/1.webp" class="card-img-top" alt="...">
